[spring-boot-employee][David] refactor code smell getEmployeeByGender